# swish

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/: FUNDING.yml
swish/: auth.h  client.h  config.h  cookie.h  default_callbacks.h  http.h  io_buffers.h  proxy.h  request.h  response.h  status_codes.h  swish.h  type_helpers.h  utils.h  xcurses.h
